--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -45,9 +45,18 @@ component, formatting, style, styling, insert
 \end{IEEEkeywords}
 
 \section{Introduction}\label{Intro}
-This document is a model and instructions for \LaTeX.
-Please observe the conference page limits. 
-
+A substantial amount of work has been done to uncover the
+effects that individual differences have on visualization
+interactions. The implications of this research are attractive
+and far-reaching; with a profound understanding of this
+relationship, we could design visualizations catered to a
+person’s specific needs, and infer a person’s traits from
+their interactions with electronic media.  However, this work
+has been fairly limited in scope, and it has been difficult to
+generalize their conclusions to higher level tasks. This paper
+is a survey of the work that has been done to explore these
+relationships, and the frameworks that have been used to
+categorize them. 
 \section{Second Section}
 
 \subsection{Subsection}
