--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -41,7 +41,8 @@ or Math in Paper Title or Abstract.
 \end{abstract}
 
 \begin{IEEEkeywords}
-component, formatting, style, styling, insert
+visualization, individual differences, personality,
+locus of control, cognitive abilities
 \end{IEEEkeywords}
 
 \section{Introduction}\label{Intro}
@@ -51,18 +52,41 @@ interactions. The implications of this research are attractive
 and far-reaching; with a profound understanding of this
 relationship, we could design visualizations catered to a
 person’s specific needs, and infer a person’s traits from
-their interactions with electronic media.  However, this work
-has been fairly limited in scope, and it has been difficult to
-generalize their conclusions to higher level tasks. This paper
-is a survey of the work that has been done to explore these
-relationships, and the frameworks that have been used to
-categorize them. 
-\section{Second Section}
+their interactions with electronic media.  However, there is
+still much work to be done, the nature of which is not always
+immediately clear. This paper is a survey of the work that has
+been done, and a proposal for future avenues of research.
+
+\subsection{Challenges}\label{IntroChallenges}
+The task of surveying the role of individual differences on
+visual analytics interactions is a very open-ended problem.
+There are many ways to taxonomize this research, such as by
+by individual trait or experimental design. However, the
+distribution of research effort is uneven; there is
+far more research focusing on certain individual differences,
+such as locus of control, than others, such as openness.
+As such, a taxonomy that simply enumerates the work done
+for each trait would be limited. Instead, we
+
+
+\section{Locus of Control}\label{LocusOfControl}
+Locus of Control, the degree to which a person believes they
+have control over their lives, has been studied closely
+within the context of visualization. By examining
+the progression of this research, we uncover a logical
+progression
+
+- Also consider that Locus of control is the focus of many
+papers, whereas many Big 5 traits are examined as a whole.
+There is less detail given to any one of them. d
+
+
+
 
 \subsection{Subsection}
 
-\cite{b1}
-
+\cite{GreenTowardsPersonalEquation}
+\cite{Ziemkiewicz,ZiemkiewiczOttley,OttleyPriming,Waldo}
 \bibliographystyle{ieee}
 \bibliography{refs}
 \vspace{12pt}
