--- a/refs.bib
+++ b/refs.bib
@@ -1,48 +1,61 @@
-@article{b1,
-  title={Computer vision: algorithms and applications},
-  author={Szeliski, Richard},
-  year={2010},
-  journal={Springer Science \& Business Media}
+@misc{GreenTowardsPersonalEquation,
+	abstract = {These current studies explored the impact of individual differences in personality factors on interface interaction and learning performance behaviors in both an interactive visualization and a menu-driven web table in two studies. Participants were administered 3 psychometric measures designed to assess Locus of Control, Extraversion, and Neuroticism. Participants were then asked to complete multiple procedural learning tasks in each interface. Results demonstrated that all three measures predicted completion times. Additionally, results analyses demonstrated personality factors also predicted the number of insights participants reported while completing the tasks in each interface. We discuss how these findings advance our ongoing research in the Personal Equation of Interaction.},
+	affiliation = {Sch. of Interactive Arts + Technol., Simon Fraser Univ., Surrey, BC, Canada},
+	author = {Green, T M and Fisher, B},
+	doi = {10.1109/VAST.2010.5653587},
+	keywords = {psychometric testing; cognition; data analysis; data visualisation; human factors; multiple procedural learning tasks; personal interaction equation; personality factors; visual analytics interface interaction; interactive visualization; menu-driven web table; psychometric measures; neuroticism; extraversion; Particle measurements; Atmospheric measurements; Equations; Visual analytics; Computers; visualization taxonomies and models; cognition and perception theory; embodied cognition},
+	language = {Undetermined},
+	title = {Towards the Personal Equation of Interaction: The impact of personality factors on visual analytics interface interaction},
 }
-@article{b2,
-  title={Computer on: algorithms and applications},
-  author={Szeliski, Richard},
-  year={2010},
-  journal={Springer Science \& Business Media}
+@INPROCEEDINGS{Ziemkiewicz, 
+author={C. {Ziemkiewicz} and R. J. {Crouser} and A. R. {Yauilla} and S. L. {Su} and W. {Ribarsky} and R. {Chang}}, 
+booktitle={2011 IEEE Conference on Visual Analytics Science and Technology (VAST)}, 
+title={How locus of control influences compatibility with visualization style}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={81-90}, 
+keywords={data visualisation;user interfaces;control locus;visualization style compatibility;individual personality difference;visualization system;personality trait;visualization design;indentation metaphor;containment metaphor;user speed;user preference;cognitive psychology;visual analytics design;user needs;Layout;Data visualization;Visual analytics;Particle measurements;Encoding;Correlation;H.5.m [Information Interfaces and Presentation (HCI)]: Miscellaneous}, 
+doi={10.1109/VAST.2011.6102445}, 
+ISSN={}, 
+month={Oct}
 }
-@article{b3,
-  title={Cmputer vision: algorithms and applications},
-  author={Szeliski, Richard},
-  year={2010},
-  journal={Springer Science \& Business Media}
+@article{ZiemkiewiczOttley, 
+author={C. {Ziemkiewicz} and A. {Ottley} and R. J. {Crouser} and A. R. {Yauilla} and S. L. {Su} and W. {Ribarsky} and R. {Chang}}, 
+journal={IEEE Transactions on Visualization and Computer Graphics}, 
+title={How Visualization Layout Relates to Locus of Control and Other Personality Factors}, 
+year={2013}, 
+volume={19}, 
+number={7}, 
+pages={1109-1121}, 
+keywords={data visualisation;visualization layout;locus of control;personality factors;individual personality difference;complex visualization systems;personality traits;LOC;color;interaction;labeling;list metaphor;containment metaphor;adaptive visual analytics;visualization evaluation;visualization externalization theory;Layout;Data visualization;Problem-solving;Correlation;Visual analytics;Electronic mail;Visualization;individual differences;locus of control;Age Factors;Computer Graphics;Extraversion (Psychology);Humans;Internal-External Control;Introversion (Psychology);Personality;Personality Assessment;Sex Factors;Visual Perception}, 
+doi={10.1109/TVCG.2012.180}, 
+ISSN={1077-2626}, 
+month={July}
 }
-@article{b4,
-  title={Coputer vision: algorithms and applications},
-  author={Szeliski, Richard},
-  year={2010},
-  journal={Springer Science \& Business Media}
+@INPROCEEDINGS{OttleyPriming, 
+author={A. {Ottley} and R. J. {Crouser} and C. {Ziemkiewicz} and R. {Chang}}, 
+booktitle={2012 IEEE Conference on Visual Analytics Science and Technology (VAST)}, 
+title={Priming Locus of Control to affect performance}, 
+year={2012}, 
+volume={}, 
+number={}, 
+pages={237-238}, 
+keywords={data visualisation;psychology;locus of control;performance predictor;visualization tool;visualization design;LOC measure;Amazon Mechanical Turk;personality psychology;LOC scale;user speed;user accuracy;visual metaphor;Layout;Educational institutions;Psychology;Electronic mail;Visual analytics;Marine vehicles}, 
+doi={10.1109/VAST.2012.6400535}, 
+ISSN={}, 
+month={Oct}
 }
-@article{b5,
-  title={Computer vision: algthms and applications},
-  author={Szeliski, Richard},
-  year={2010},
-  journal={Springer Science \& Business Media}
-}
-@article{b6,
-  title={Computer vision: algrithms and applications},
-  author={Szeliski, Richard},
-  year={2010},
-  journal={Springer Science \& Business Media}
-}
-@article{b7,
-  title={Computer vision: alg and applications},
-  author={Szeliski, Richard},
-  year={2010},
-  journal={Springer Science \& Business Media}
-}
-@article{b8,
-  title={Computer vision: algorithms ad applications},
-  author={Szeliski, Richard},
-  year={2010},
-  journal={Springer Science \& Business Media}
+@ARTICLE{Waldo, 
+author={E. T. {Brown} and A. {Ottley} and H. {Zhao} and Q. {Lin} and R. {Souvenir} and A. {Endert} and R. {Chang}}, 
+journal={IEEE Transactions on Visualization and Computer Graphics}, 
+title={Finding Waldo: Learning about Users from their Interactions}, 
+year={2014}, 
+volume={20}, 
+number={12}, 
+pages={1663-1672}, 
+keywords={data analysis;data visualisation;graphical user interfaces;learning (artificial intelligence);Finding Waldo;mine interactions;user personality traits;user interaction data analysis;visual search task;machine learning algorithms;user personality factors;extraversion;neuroticism;average task completion time;human collaborator;mixed initiative visual analytics systems;Mice;Visual analytics;Accuracy;Data visualization;Computers;Encoding;User Interactions;Analytic Provenance;Visualization;Applied Machine Learning;Adolescent;Adult;Algorithms;Computer Graphics;Decision Making;Humans;Image Processing, Computer-Assisted;Machine Learning;Middle Aged;Personality;Task Performance and Analysis;User-Computer Interface;Young Adult}, 
+doi={10.1109/TVCG.2014.2346575}, 
+ISSN={1077-2626}, 
+month={Dec}
 }
