--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -54,31 +54,57 @@ relationship, we could design visualizations catered to a
 person’s specific needs, and infer a person’s traits from
 their interactions with electronic media.  However, there is
 still much work to be done, the nature of which is not always
-immediately clear. This paper is a survey of the work that has
-been done, and a proposal for future avenues of research.
+immediately clear. 
 
-\subsection{Challenges}\label{IntroChallenges}
 The task of surveying the role of individual differences on
 visual analytics interactions is a very open-ended problem.
 There are many ways to taxonomize this research, such as by
 by individual trait or experimental design. However, the
 distribution of research effort is uneven; there is
-far more research focusing on certain individual differences,
+far more research focusing on certain individual traits,
 such as locus of control, than others, such as openness.
 As such, a taxonomy that simply enumerates the work done
-for each trait would be limited. Instead, we
+for each trait would be limited. Instead, we use the
+well-understood traits to contextualize the
+state of research for all other traits
+to gain clearer insignt into productive avenues for future
+research.
 
+The well understood traits that we examine are locus of control,
+perceptural speed, visual working memory, verbal working
+memory. We refer to these latter three traits under the
+collective umbrella of "cognitive traits", because a significant
+amount of research has evaluated them together. By tracking
+the progression of research for these two groups, and discussing
+their roles in visual analytics interactions, we can more
+accurately discuss the states of other individual differences. 
+% In turn- % talk about less studied traits?
 
-\section{Locus of Control}\label{LocusOfControl}
+\section{Well-Understood Traits}\label{WellStudied}
+It is worth noting that we define these traits as "well understood"
+relative to the collective body of individual traits. This
+definition does not necessarily imply that there has been greater
+research interest in these traits. Rather, studies often evaluate
+multiple traits in conjunction and the traits we label as
+"well understood" reflect greater results.
+\subsection{Locus of Control}\label{LocusOfControl}
 Locus of Control, the degree to which a person believes they
 have control over their lives, has been studied closely
-within the context of visualization. By examining
-the progression of this research, we uncover a logical
-progression
+within the context of visualization. Green and Fisher's 
+"Towards the Personal Equation of Interaction:
+The Impact of Personality Factors on Visual Analytics Interface
+Interaction" was a seminal work in this effort. In this study,
+participants were asked to complete personality inventories
+to assess their degrees of locus of control, anxiety, and other
+  
 
-- Also consider that Locus of control is the focus of many
-papers, whereas many Big 5 traits are examined as a whole.
-There is less detail given to any one of them. d
+
+% - Also consider that Locus of control is the focus of many
+% papers, whereas many Big 5 traits are examined as a whole.
+% There is less detail given to any one of them. d
+% - With locus of control section, we talk about the
+% progression in terms of the different tasks that are asked
+% in each study, and how they illuminate more about LOC
 
 
 
