--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,10 @@
+@article{Green2010UsingPF,
+  title={Using Personality Factors to Predict Interface Learning Performance},
+  author={Tera Marie Green and Dong Hyun Jeong and Brian D. Fisher},
+  journal={2010 43rd Hawaii International Conference on System Sciences},
+  year={2010},
+  pages={1-10}
+}
 @misc{GreenTowardsPersonalEquation,
 	abstract = {These current studies explored the impact of individual differences in personality factors on interface interaction and learning performance behaviors in both an interactive visualization and a menu-driven web table in two studies. Participants were administered 3 psychometric measures designed to assess Locus of Control, Extraversion, and Neuroticism. Participants were then asked to complete multiple procedural learning tasks in each interface. Results demonstrated that all three measures predicted completion times. Additionally, results analyses demonstrated personality factors also predicted the number of insights participants reported while completing the tasks in each interface. We discuss how these findings advance our ongoing research in the Personal Equation of Interaction.},
 	affiliation = {Sch. of Interactive Arts + Technol., Simon Fraser Univ., Surrey, BC, Canada},
