--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -115,7 +115,7 @@ was a seminal work in this effort. In this study,
 participants were asked to complete personality inventories
 to assess their degrees of locus of control, anxiety, neuroticism, 
 extraversion, self-regulation, and tolerance of ambigiuty. They then
-familiarized themselves with two visualizations of the same dataset:
+familiarized themselves with two real-world visualizations of the same dataset:
 a row-based representaiton, and a pictoral, container-based representaiton.
 Particpants then used these visualizations to answer a series of
 procedural and inferential tasks, and their answers were analyzed with
@@ -130,21 +130,37 @@ purpose of these interactions.
 Since Green et al's study, Locus of control, and
 individual differences in general have been studied with greater attention
 to the precise nature of given visualizations and tasks. Ziemkiewicz et al's 
-2013 study, "How Visualization Layout Relates to Locus of Control and Other
-Personality Factors" assessed both procedural and inferential tasks, while
-also studying individual differences with a more isolated assessment of layout.
-This study evaluated locus of control, neuroticism, and extraversion on
-hierarchical data, with four visualizations of increasingly explicit
-containment metaphors. These metaphors ranged from simple indentations to
-mark hierarchy to series of nested boxes. It found that those with external
+2011 study, "How locus of control influences compatibility with visualization style" assessed both procedural and inferential tasks, while
+examined individual differences with a more isolated assessment of layout.
+This study evaluated locus of control with four visualizations of increasingly
+explicit containment metaphors. These metaphors ranged from simple indentations
+to mark hierarchy to series of nested boxes. It found that those with external
 locus of control answered questions on the most and least explicit metaphors
 faster, and performed better than those with internal locus of control in
 general. There were no response time differences observed for those with
 average locus of control. Search tasks also produced no significant differences
-in response time across visualizations and response times \cite{ZiemkiewiczOttley}.
+in response time across visualizations and participants\cite{Ziemkiewicz}.
+This study was a progression on Green's because it isolated visualization layout
+in its study of individual traits, while reinforcing the idea that the types of
+tasks performed (eg procedural vs inferential) affect interactions nonuniformly.
 
+ At this point, there was substantive evidence that locus of control impacted
+ visualization interactions with respect to layout structure
+and tasks performed. Ottley et al's 2012 study, "Priming Locus of Control
+to Affect Performance", extended this research by examining if Locus of Control
+could be "primed" before visualization interaction. People were asked
+to recall situations in which they felt in control or out of control, before
+participanting in a replication of Ziemkiewicz's 2011 study. Ottley et al found
+that peoples' Locus of Control could be "pushed" externally or internally, which
+was reflected in the replicated study's results \cite{OttleyPriming}.
 
-
+% Why LOC studies are a useful metric:
+%     diverse range of tasks and visualizations assessed
+%     Studies vary in:
+%         Measurement (eye tracking, completion time, accuracy)
+%         Visualization type (isolated layout, general)
+%         Task (procedural (ie search), inferential)
+% What effects do LOC have on visualization interaction?
 
 % potential shortcomings of these papers as well
 % next steps: based on what we've seen, what are possible future directions?
@@ -176,9 +192,6 @@ in response time across visualizations and response times \cite{ZiemkiewiczOttle
 % - With locus of control section, we talk about the
 % progression in terms of the different tasks that are asked
 % in each study, and how they illuminate more about LOC
-
-
-
 
 \subsection{Subsection}
 
