--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -151,10 +151,15 @@ to Affect Performance", extended this research by examining if Locus of Control
 could be "primed" before visualization interaction. People were asked
 to recall situations in which they felt in control or out of control, before
 participanting in a replication of Ziemkiewicz's 2011 study. Ottley et al found
-that peoples' Locus of Control could be "pushed" externally or internally, which
-was reflected in the replicated study's results \cite{OttleyPriming}.
+that peoples' Locus of Control could be "swayed" externally or internally, which
+was reflected in the replicated study's results \cite{OttleyPriming}. The idea
+that individual traits, which are often thought to be static, can be influenced
+carries powerful implications. As the personality-visualization relationship
+becomes more well understood, whether traits can be primed to provoke different
+interactions with a given visualization may become a relevant question.
 
-% Why LOC studies are a useful metric:
+
+% Why LOC studies are robust, are a useful metric:
 %     diverse range of tasks and visualizations assessed
 %     Studies vary in:
 %         Measurement (eye tracking, completion time, accuracy)
