finish locus of control draft

--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -158,19 +158,28 @@ carries powerful implications. As the personality-visualization relationship
 becomes more well understood, whether traits can be primed to provoke different
 interactions with a given visualization may become a relevant question.
 
+In a return to direct application, Brown et al's 2014 study, "Finding Waldo:
+Learning about Users from their Interactions" looks at the classic children's
+game, Where's Waldo. After having their levels of locus of control,
+extraversion, and neuroticism assessed, participants were asked to find and
+identify the Waldo character as fast as possible in an image. The image was
+zoomed in, and so required arrow presses to explore fully. Arrow presses,
+mouse events, and task completion times were recorded. These recordings
+were used to develop state based, event based, and sequence based encodings
+with which to predict personality using machine learning. It was found that
+all three assessed traits could be predicted from these encodings\cite{Waldo}.
+This study not only introduced a new task outside of the domain of information
+retrieval and analysis, but also showed that novel interaction encodings beyond
+speed and accuracy had promising applications for data analysis.
 
-% Why LOC studies are robust, are a useful metric:
-%     diverse range of tasks and visualizations assessed
-%     Studies vary in:
-%         Measurement (eye tracking, completion time, accuracy)
-%         Visualization type (isolated layout, general)
-%         Task (procedural (ie search), inferential)
-% What effects do LOC have on visualization interaction?
+While these four studies are far from an exhaustive list of work done on
+locus of control, they do present a robust exploration of its relationship with
+visualization. Locus of control has been evaluated with respect to a diverse
+range of tasks, interaction measurement methods, and visualizations. Although
+more generalized truths about the role of locus of control in visual analytics
+interactions have not been uncovered, the state of locus of control research
+is a good reference for other personality traits.
 
-% potential shortcomings of these papers as well
-% next steps: based on what we've seen, what are possible future directions?
-%  as we think about how computers can help users, perhaps openness is a trait
-% that people can look at
 
 % Openness
 % - Visual metaphors show lack of significance
@@ -181,6 +190,11 @@ interactions with a given visualization may become a relevant question.
 % - Could not find significant results
 % - Most tasks shown do not have an intuitive connection to agreeableness;
 % therefore this absence of significance makes sense
+
+% Next steps
+% based on what we've seen, what are possible future directions?
+%  as we think about how computers can help users, perhaps openness is a trait
+% that people can look at
 
 % identify and find behaviors showed different performances than
 % inferential tasks- suggesting that the impact of traits can be very
@@ -194,9 +208,6 @@ interactions with a given visualization may become a relevant question.
 % - Also consider that Locus of control is the focus of many
 % papers, whereas many Big 5 traits are examined as a whole.
 % There is less detail given to any one of them. d
-% - With locus of control section, we talk about the
-% progression in terms of the different tasks that are asked
-% in each study, and how they illuminate more about LOC
 
 \subsection{Subsection}
 
